ingress-egress/allow-egress-production.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress1
  namespace: development
spec:
  podSelector:
    matchLabels: 
      run: app-pod
  policyTypes:
  - Egress    
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
           run: production
