ingress-egress/default-deny-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-policy
  namespace: development
spec:
  podSelector: {}
  policyTypes:
  - Egress
