ingress-egress/default-deny-production.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-prodctn
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
