ingress-egress/egress-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: development
spec:
  podSelector:
    matchLabels: 
      run: app-pod
  policyTypes:
  - Egress    
  egress:
  - to:
    - podSelector:
        matchLabels:
           run: adb-pod
