ingress-egress/ingress-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: development
spec:
  podSelector:
    matchLabels: 
      run: adb-pod
  policyTypes:
  - Ingress    
  ingress:
  - from:
    - podSelector:
        matchLabels:
           run: app-pod
