ingress-egress/ingress-production-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress1
  namespace: production
spec:
  podSelector:
    matchLabels: 
      run: live-pod
  policyTypes:
  - Ingress    
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
           run: development
